--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "mongoose": "^8.8.0",
     "mongoose-paginate-v2": "^1.8.5",
     "multer": "^1.4.5-lts.1",
+    "node-latex": "^3.1.0",
     "rimraf": "^6.0.1",
     "validator": "^13.12.0"
   },
-  "type":"module"
+  "type": "module"
 }
